fixes login box centering

--- a/css/login.css
+++ b/css/login.css
@@ -10,7 +10,7 @@ body {
     margin: 0 auto;
     width: 98%;
     max-width: 1140px;
-	height: 800px;
+	height: 100%;
 }
 
 .logo {
@@ -61,12 +61,12 @@ input {
     background-color: #fff;
     margin: 0 auto;
 
-    position:absolute;
-    top:45%;
-    left:32%;
+    position:relative;
+    top:50%;
+    /*left:32*/
     width: 500px;
     height:360px;
-    margin-top:-120px;
+    margin-top:-195px;
 
     min-height: 260px;
     max-height: 360px;
